--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -15,5 +15,5 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - run: npm install -g npm@8.5.5
+      - run: npm run build
