--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -34,9 +34,12 @@ jobs:
 
       # npm install npm should be removed when https://github.com/npm/cli/issues/4942 is fixed
       - name: Build 🔧
-        run: |
-          npm install -g npm@8.5.5
-          npm run build
+      - run: yarn install --frozen-lockfile
+      - run: yarn crowdin:sync
+      - name: Clean Crowdin Front Matter issues
+        run: bash clean.sh
+        shell: bash
+      - run: yarn build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.4.1
