--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -6,9 +6,12 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "docs/**"
-      - .github/workflows/deploy-docs.yml
+  pull_request:
+    branches:
+      - main
+  paths:
+    - "docs/**"
+    - .github/workflows/deploy-docs.yml
 
 permissions:
   contents: read
