--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -15,5 +15,9 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
+      - run: |
+          chmod +x build-docs.sh
+          ./build-docs.sh
+
       - run: yarn install --frozen-lockfile
       - run: yarn build
