--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -1,9 +1,9 @@
 name: Copy MD Files
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
-
+  workflow_dispatch:
+    schedule:
+      - cron: '0 0,12 * * *'
 jobs:
   sync-docs:
     runs-on: ubuntu-latest
