--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -2,8 +2,10 @@ name: Copy MD Files
 
 on:
   workflow_dispatch:
-    schedule:
+  schedule:
       - cron: '0 0,12 * * *'
+
+
 jobs:
   sync-docs:
     runs-on: ubuntu-latest
@@ -13,13 +15,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version:
+          node-version: 16
 
       - name: Install Dependencies
         run: |
-          npm install -g jq   
           yarn install --frozen-lockfile  
 
       - name: Run Sync Script
