--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
       - cron: '0 0,12 * * *'
-
+  push:
 
 jobs:
   sync-docs:
@@ -27,3 +27,8 @@ jobs:
         run: |
           chmod +x sync_script.sh  
           ./sync_script.sh
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: always()
+        with:
+          commit_message: sync documentation changes
