--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -50,3 +50,7 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
+        with:
+          branch: sync-docs-branch
+          title: "chore: sync documentation"
+          assignees: samricotta,julienrbrt,tac0turtle
