--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build Docs
         run: |
-          ./build-legacy-docs.sh
+          ./build-vuepress.sh
 
       - name: Build
         run: yarn build
