--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -38,30 +38,6 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           branch: sync-docs-branch
-
-  sims-notify-success:
-    needs: sync-docs-and-create-pr
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Get previous workflow status
-        uses: ./.github/actions/last-workflow-status
-        id: last_status
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Notify Slack on success
-        if: ${{ steps.last_status.outputs.last_status == 'failure' }}
-        uses: rtCamp/action-slack-notify@v2.2.1
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: sdk-sims
-          SLACK_USERNAME: Sim Tests release/0.50.x
-          SLACK_ICON_EMOJI: ":white_check_mark:"
-          SLACK_COLOR: good
-          SLACK_MESSAGE: 0.50.x Sims are passing
-          SLACK_FOOTER: ""
         
   sims-notify-failure:
     permissions:
@@ -75,8 +51,8 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: sdk-sims
-          SLACK_USERNAME: Sim Tests release/0.50.x
+          SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
           SLACK_ICON_EMOJI: ":skull:"
           SLACK_COLOR: danger
-          SLACK_MESSAGE: 0.50.x Sims are failing
+          SLACK_MESSAGE: Copying docs is failing
           SLACK_FOOTER: ""
