--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -8,20 +8,12 @@ on:
 jobs:
   sync-docs-and-create-pr:
     runs-on: ubuntu-latest
-
     permissions:
       contents: write
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          ref: sync-docs-branch
-
-      - name: Checkout Sync-Branch
-        run: |
-          git fetch --all
-          git checkout sync-docs-branch
 
       - name: Set Up Node.js
         uses: actions/setup-node@v3
@@ -46,3 +38,21 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           branch: sync-docs-branch
+        
+  sims-notify-failure:
+    permissions:
+      contents: none
+    needs: sync-docs-and-create-pr
+    runs-on: ubuntu-latest
+    if: ${{ failure() }}
+    steps:
+      - name: Notify Slack on failure
+        uses: rtCamp/action-slack-notify@v2.2.1
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_CHANNEL: sdk-sims
+          SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
+          SLACK_ICON_EMOJI: ":skull:"
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: Copying docs is failing
+          SLACK_FOOTER: ""
