--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          ref: sam/test-workflow
+          ref: sync-docs
           fetch-depth: 0
 
       - name: Set Up Node.js
