--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -37,25 +37,25 @@ jobs:
         with:
           message: 'Updated MD File Changes from cosmos-sdk/docs'
 
-      - name: Push To Sync-Docs
-        uses: ad-m/github-push-action@master
-        with:
-          branch: sync-docs
+  #     - name: Push To Sync-Docs
+  #       uses: ad-m/github-push-action@master
+  #       with:
+  #         branch: sync-docs
         
-  sims-notify-failure:
-    permissions:
-      contents: none
-    needs: sync-docs-and-create-pr
-    runs-on: ubuntu-latest
-    if: ${{ failure() }}
-    steps:
-      - name: Notify Slack on failure
-        uses: rtCamp/action-slack-notify@v2.2.1
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: sdk-sims
-          SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
-          SLACK_ICON_EMOJI: ":skull:"
-          SLACK_COLOR: danger
-          SLACK_MESSAGE: Copying docs is failing
-          SLACK_FOOTER: ""
+  # sims-notify-failure:
+  #   permissions:
+  #     contents: none
+  #   needs: sync-docs-and-create-pr
+  #   runs-on: ubuntu-latest
+  #   if: ${{ failure() }}
+  #   steps:
+  #     - name: Notify Slack on failure
+  #       uses: rtCamp/action-slack-notify@v2.2.1
+  #       env:
+  #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  #         SLACK_CHANNEL: sdk-sims
+  #         SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
+  #         SLACK_ICON_EMOJI: ":skull:"
+  #         SLACK_COLOR: danger
+  #         SLACK_MESSAGE: Copying docs is failing
+  #         SLACK_FOOTER: ""
