--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Push To Sync-Docs
         uses: ad-m/github-push-action@master
         with:
-          branch: sync-docs
+          branch: main
 
       - uses: peter-evans/create-pull-request@v5
         with:
