--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          ref: sync-docs
+          ref: main
           fetch-depth: 0
 
       - name: Set Up Node.js
@@ -40,7 +40,7 @@ jobs:
       - name: Push To Sync-Docs
         uses: ad-m/github-push-action@master
         with:
-          branch: main
+          branch: sync-docs
 
       - uses: peter-evans/create-pull-request@v5
         with:
