fix: change branch for PR  (#103)
* change branch

* Update copy-md.yml

* Update copy-md.yml

--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           commit-message: "chore: Sync docs from cosmos-sdk/docs"
           title: "chore: upate documenation from cosmos-sdk/docs"
+          base: main
           branch: "sync-docs"
           delete-branch: false
           body: |
