--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Node.js 🔧
         uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: "18"
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
