--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -18,44 +18,47 @@ jobs:
           ref: sync-docs
           fetch-depth: 0
 
-      - name: Set Up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+      # - name: Set Up Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
 
-      - name: Install Dependencies
-        run: |
-          yarn install --frozen-lockfile
+      # - name: Install Dependencies
+      #   run: |
+      #     yarn install --frozen-lockfile
           
-      - name: Run Sync Script
-        run: |
-          chmod +x sync_script.sh
-          ./sync_script.sh
+      # - name: Run Sync Script
+      #   run: |
+      #     chmod +x sync_script.sh
+      #     ./sync_script.sh
+
+      - name: Run LS to see what files we have access to
+        run: ls -la
 
       - name: Run Tutorials Script
         run: |
           chmod +x tutorials-script.sh
           ./tutorials-script.sh
 
-      - name: Add And Commit
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: 'Updated MD File Changes from cosmos-sdk/docs'
+      # - name: Add And Commit
+      #   uses: EndBug/add-and-commit@v9
+      #   with:
+      #     message: 'Updated MD File Changes from cosmos-sdk/docs'
 
-      - name: Push To Sync-Docs
-        uses: ad-m/github-push-action@master
-        with:
-          branch: sync-docs
+      # - name: Push To Sync-Docs
+      #   uses: ad-m/github-push-action@master
+      #   with:
+      #     branch: sync-docs
 
-      - uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: "chore: Sync docs from cosmos-sdk/docs"
-          title: "chore: upate documenation from cosmos-sdk/docs"
-          base: main
-          branch: "sync-docs"
-          delete-branch: false
-          body: |
-            This PR updates the documentation from cosmos-sdk/docs
+      # - uses: peter-evans/create-pull-request@v5
+      #   with:
+      #     commit-message: "chore: Sync docs from cosmos-sdk/docs"
+      #     title: "chore: upate documenation from cosmos-sdk/docs"
+      #     base: main
+      #     branch: "sync-docs"
+      #     delete-branch: false
+      #     body: |
+      #       This PR updates the documentation from cosmos-sdk/docs
         
   sims-notify-failure:
     permissions:
