--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -14,9 +14,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          ref: sync-docs
-          fetch-depth: 0
 
       # - name: Set Up Node.js
       #   uses: actions/setup-node@v3
@@ -60,21 +57,21 @@ jobs:
       #     body: |
       #       This PR updates the documentation from cosmos-sdk/docs
         
-  sims-notify-failure:
-    permissions:
-      contents: none
-    needs: sync-docs-and-create-pr
-    runs-on: ubuntu-latest
-    if: ${{ failure() }}
-    steps:
-      - name: Notify Slack on failure
-        uses: rtCamp/action-slack-notify@v2.2.1
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: sdk-sims
-          SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
-          SLACK_ICON_EMOJI: ":skull:"
-          SLACK_COLOR: danger
-          SLACK_MESSAGE: Copying docs is failing
-          SLACK_FOOTER: ""
+  # sims-notify-failure:
+  #   permissions:
+  #     contents: none
+  #   needs: sync-docs-and-create-pr
+  #   runs-on: ubuntu-latest
+  #   if: ${{ failure() }}
+  #   steps:
+  #     - name: Notify Slack on failure
+  #       uses: rtCamp/action-slack-notify@v2.2.1
+  #       env:
+  #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  #         SLACK_CHANNEL: sdk-sims
+  #         SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
+  #         SLACK_ICON_EMOJI: ":skull:"
+  #         SLACK_COLOR: danger
+  #         SLACK_MESSAGE: Copying docs is failing
+  #         SLACK_FOOTER: ""
 
