--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -5,8 +5,8 @@ on:
   schedule:
     - cron: '0 0,12 * * *'
 
-env:
-  PR_BRANCH_NAME: "sync-docs/"${{ github.sha }}
+# env:
+#   PR_BRANCH_NAME: "sync-docs/"${{ github.sha }}
 
 jobs:
   sync-docs-and-create-pr:
