--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Add And Commit
         uses: EndBug/add-and-commit@v9
         with:
+          new_branch: $PR_BRANCH_NAME
           message: 'Updated MD File Changes from cosmos-sdk/docs'
 
       - name: Push To Sync-Docs
