--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -25,9 +25,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-    
-      # - name: Create new branch
-      #   run: git checkout -b $PR_BRANCH_NAME
 
       - name: Install Dependencies
         run: |
@@ -54,7 +51,7 @@ jobs:
       #   with:
       #     branch: ${{ env.PR_BRANCH_NAME }}
 
-      - uses: peter-evans/create-pull-request@v5
+      - uses: peter-evans/create-pull-request@v6
         with:
           commit-message: "chore: Sync docs from cosmos-sdk/docs"
           title: "chore: upate documenation from cosmos-sdk/docs"
@@ -64,21 +61,21 @@ jobs:
           body: |
             This PR updates the documentation from cosmos-sdk/docs
         
-  sims-notify-failure:
-    permissions:
-      contents: none
-    needs: sync-docs-and-create-pr
-    runs-on: ubuntu-latest
-    if: ${{ failure() }}
-    steps:
-      - name: Notify Slack on failure
-        uses: rtCamp/action-slack-notify@v2.2.1
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: sdk-sims
-          SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
-          SLACK_ICON_EMOJI: ":skull:"
-          SLACK_COLOR: danger
-          SLACK_MESSAGE: Copying docs is failing
-          SLACK_FOOTER: ""
+  # sims-notify-failure:
+  #   permissions:
+  #     contents: none
+  #   needs: sync-docs-and-create-pr
+  #   runs-on: ubuntu-latest
+  #   if: ${{ failure() }}
+  #   steps:
+  #     - name: Notify Slack on failure
+  #       uses: rtCamp/action-slack-notify@v2.2.1
+  #       env:
+  #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  #         SLACK_CHANNEL: sdk-sims
+  #         SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
+  #         SLACK_ICON_EMOJI: ":skull:"
+  #         SLACK_COLOR: danger
+  #         SLACK_MESSAGE: Copying docs is failing
+  #         SLACK_FOOTER: ""
 
