--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -62,21 +62,21 @@ jobs:
           body: |
             This PR updates the documentation from cosmos-sdk/docs
 
-  # sims-notify-failure:
-  #   permissions:
-  #     contents: none
-  #   needs: sync-docs-and-create-pr
-  #   runs-on: ubuntu-latest
-  #   if: ${{ failure() }}
-  #   steps:
-  #     - name: Notify Slack on failure
-  #       uses: rtCamp/action-slack-notify@v2.2.1
-  #       env:
-  #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-  #         SLACK_CHANNEL: sdk-sims
-  #         SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
-  #         SLACK_ICON_EMOJI: ":skull:"
-  #         SLACK_COLOR: danger
-  #         SLACK_MESSAGE: Copying docs is failing
-  #         SLACK_FOOTER: ""
+  sims-notify-failure:
+    permissions:
+      contents: none
+    needs: sync-docs-and-create-pr
+    runs-on: ubuntu-latest
+    if: ${{ failure() }}
+    steps:
+      - name: Notify Slack on failure
+        uses: rtCamp/action-slack-notify@v2.2.1
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_CHANNEL: sdk-sims
+          SLACK_USERNAME: Failed to copy docs from Cosmos SDK to Docs repo
+          SLACK_ICON_EMOJI: ":skull:"
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: Copying docs is failing
+          SLACK_FOOTER: ""
 
