--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/plugin-client-redirects": "^2.4.0",
     "@docusaurus/plugin-content-docs": "^2.4.0",
     "@docusaurus/preset-classic": "2.4.0",
+    "@docusaurus/theme-mermaid": "2.4.0",
     "@mdx-js/react": "^1.6.22",
     "@you54f/theme-github-codeblock": "^0.1.1",
     "clsx": "^1.2.1",
