--- a/.github/workflows/copy-md.yml
+++ b/.github/workflows/copy-md.yml
@@ -55,7 +55,7 @@ jobs:
       - uses: peter-evans/create-pull-request@v6
         with:
           commit-message: "chore: Sync docs from cosmos-sdk/docs"
-          title: "chore: upate documenation from cosmos-sdk/docs"
+          title: "chore: update documenation from cosmos-sdk/docs"
           base: main
           branch: ${{ env.PR_BRANCH_NAME }}
           delete-branch: false
