--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -2,7 +2,11 @@ name: Test deployment
 
 on:
   pull_request:
+   branches:
+      - '**'
   push:
+   branches:
+      - '**'
 
 jobs:
   test-deploy:
